basic style changes btw youtube and spotify mode

--- a/final-project/public/index.html
+++ b/final-project/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   </head>
-  <body style="background-color: rgb(36, 59, 39)">
+  <body>
     <div id="root"></div>
   </body>
 </html>
